<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"
    android:background="@drawable/side_nav_bar"
    >

    <group android:checkableBehavior="none">
        <item
            android:orderInCategory="0"
            android:id="@+id/nav_settings"
            android:icon="@mipmap/twotone_settings_black_24"
            android:title="@string/action_settings"/>


    </group>

    <group android:checkableBehavior="none">
        <item android:title="@string/mode"
            android:orderInCategory="1"
            android:enabled="false"
            android:checkable="true"
            >
            <menu>

                <item
                    android:orderInCategory="2"
                    android:id="@+id/nav_online"
                    android:title="@string/main_radioButton_online"
                    app:actionViewClass="android.support.v7.widget.SwitchCompat"
                    />
                <item
                    android:orderInCategory="2"
                    android:id="@+id/nav_offline"
                    android:title="@string/main_radioButton_offline"
                    app:actionViewClass="android.support.v7.widget.SwitchCompat"
                   />
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/container_drawer_group_zayavkaTEP"
        android:checkableBehavior="none">
        <item
            android:id="@+id/container_group_zayavkaTEP_item"
            android:title="@string/zayavkiTEP"
            android:orderInCategory="2">
            <menu>

            </menu>
        </item>
    </group>


</menu>
